--- a/styles.css
+++ b/styles.css
@@ -30,6 +30,7 @@ h1{
 
 h2{
     font-size: 100px;
+    text-transform: uppercase;
 }
 
 h3{
@@ -68,15 +69,18 @@ h5{
     
 }
 
-.nav-item:hover{
-    text-decoration: underline;
+.nav-link:hover{
+    border-bottom: 3px solid #fff;
+    padding-bottom: 5px;
     background: linear-gradient(to top, rgb(208, 214, 249), 0%, rgb(208, 214, 249), 10%, transparent, 10.01%) no-repeat left bottom;
 }
 
-.spacenavbar:hover{
-    background-color:rgba(240, 240, 240, 0.1);
-    
-} 
+
+
+.navbar-nav:hover {
+    background: rgba(255, 255, 255, 0.04);
+backdrop-filter: blur(40.7742px);
+}
 
 .spacenavbar{
  position: absolute;
@@ -124,6 +128,7 @@ filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
     font-size: 32px;
     text-transform: uppercase;
     border: none;
+    z-index: 1;
     
 }
 
@@ -146,5 +151,46 @@ filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
 
 .homepage_destination{
     background-image: url(assets/destination/background-destination-desktop.jpg);
+    color: #fff;
 }
 
+.h5_destinationmoon{
+    position: absolute;
+width: 382px;
+height: 34px;
+left: 166.5px;
+top: 212px;
+
+border: 1px solid #000000;
+
+}
+
+.img-moon{
+    position: absolute;
+width: 445px;
+height: 445px;
+left: 230px;
+top: 343px;
+}
+
+.moon_features{
+    position: absolute;
+width: 445px;
+height: 472px;
+left: 832px;
+top: 310px;
+
+}
+
+.nav_planet{
+    font-family: 'Barlow Condensed', sans-serif;
+    font-size: 16px;
+    letter-spacing: 2.7px;
+    text-transform: uppercase;
+    position: absolute;
+left: 0%;
+right: 35.84%;
+top: 0%;
+bottom: 92.8%;
+
+}
