mise en page crew

--- a/styles.css
+++ b/styles.css
@@ -143,7 +143,7 @@ filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
     font-size: 32px;
     text-transform: uppercase;
     border: none;
-   
+   cursor: pointer;
     
 } 
 
@@ -191,6 +191,8 @@ filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
 .homepage_destination{
     background-image: url(assets/destination/background-destination-desktop.jpg);
     color: #fff;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 .h5_destinationmoon{
@@ -274,5 +276,78 @@ top: 310px;
     
 } 
 
-/* ================   DESTINATION MARS PAGE ================ */
+/* ================  CREW PAGE ================ */
 
+.crew-background{
+    background: url(assets/crew/background-crew-desktop.jpg);
+    color: #fff;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.crew{
+    position: absolute;
+
+left: 165.5px;
+top: 400px;
+
+font-family: 'Bellefair';
+font-style: normal;
+font-weight: 400;
+font-size: 32px;
+line-height: 37px;
+/* identical to box height */
+
+text-transform: uppercase;
+
+color: #FFFFFF;
+
+mix-blend-mode: normal;
+opacity: 0.5;
+}
+
+.firstname{
+    position: absolute;
+left: 165.5px;
+top: 452px;
+font-family: 'Bellefair';
+font-style: normal;
+font-weight: 400;
+font-size: 56px;
+line-height: 64px;
+text-transform: uppercase;
+
+color: #FFFFFF;
+}
+
+.text-crew{
+    position: absolute;
+width: 444px;
+height: 128px;
+left: 165px;
+top: 543px;
+color: #D0D6F9;
+font-family: 'Barlow Condensed';
+font-style: normal;
+font-weight: 400;
+font-size: 18px;
+line-height: 32px;
+}
+
+.img-crew{
+    position: absolute;
+width: 546.07px;
+height: 570px;
+left: 710.93px;
+top: 210px;
+}
+
+.list-crew{
+    display: block;
+    float: left;
+    position: absolute;
+width: 132px;
+height: 15px;
+left: 167px;
+top: 700px;
+}
