--- a/styles.css
+++ b/styles.css
@@ -201,9 +201,17 @@ width: 382px;
 height: 34px;
 left: 166.5px;
 top: 212px;
-
 border: 1px solid #000000;
 
+}
+
+.explore{
+    color: #000000;
+    text-decoration: none;
+}
+
+.explore:hover{
+    color: gray;
 }
 
 .planet{
@@ -338,13 +346,13 @@ line-height: 32px;
     position: absolute;
 width: 546.07px;
 height: 570px;
-left: 710.93px;
+left: 730px;
 top: 210px;
 }
 
 .list-crew{
     display: flex;
-    justify-content: space-around;
+    
     position: absolute;
 width: 132px;
 height: 15px;
@@ -352,6 +360,20 @@ left: 167px;
 top: 700px;
 }
 
+
+
+.dots{
+ 
+    
+    left: 167px;
+    top: 700px;
+
+    height: 10px;
+    width: 10px;
+    border-radius: 50%;
+    background-color: #fff;
+    margin: 10px;
+}
 
 
 /* ================ TECHONOLOGY PAGE ================ */
@@ -428,6 +450,11 @@ font-weight: 400;
 font-size: 32px;
 line-height: 37px;
 letter-spacing: 2px;
+}
+
+.vehicle-round, .spaceport-round, .capsule-round{
+    background-color: #fff;
+    color:#000000;
 }
 
 .vehicle:hover, 
