--- a/styles.css
+++ b/styles.css
@@ -221,6 +221,8 @@ border: 1px solid #000000;
 
 .planet:hover{
     color: #fff;
+    text-decoration: underline 2px #D0D6F9;
+    padding-bottom: 2px;
 }
 
 .img-moon{
